# GameOfLifeOOP

./: CMakeLists.txt  main.cpp
src/: Game.cpp  Game.h  World.cpp  World.h
src/Organism/: Animal.cpp  Animal.h  CollisionContext.cpp  CollisionContext.h  Human.cpp  Human.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h
src/Organism/Animals/: Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
src/Organism/Plants/: Belladonna.cpp  Belladonna.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  SosnowskysHogweed.cpp  SosnowskysHogweed.h  SowThistle.cpp  SowThistle.h
src/Utility/: Core.h  Menu.cpp  Menu.h  Vec2.cpp  Vec2.h
